--- a/main.html
+++ b/main.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMuexZd9ZRI7eCkeXZnK06UjgPZDqtfjrY1Q&usqp=CAU">
+	<h1>Sourabh sudhir Kanase</h1>
+	<a href="https://www.linkedin.com/in/sourabh-kanase-890b8225b/">LinkedIn Profile</a>
+	<section id="skills">
+		<ul>
+			<li>leadership</li>
+			<li>Problem Solving</li>
+		</ul>
+	</section>
+	<section id="projects">
+		<ul>
+			<li>blinkit clone</li>
+			<li>spotify clone</li>
+		</ul>
+		
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
